--- a/styles.css
+++ b/styles.css
@@ -100,9 +100,10 @@ a:hover {
 }
 
 .skills-img {
-  width: 10%;
+  width: 30%;
   float: left;
-  margin-right: 10px;
+  margin-right: 30px;
+  border-radius: 50%;
 }
 
 .skills2-image {
